# mission-control

./: README.md  index.html  package.json  tsconfig.json
.github/workflows/: build-release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/agent-panel/: AgentPanel.tsx
src/components/chat/: ChatPanel.tsx  MessageBubble.tsx  MessageInput.tsx
src/components/layout/: CommandPalette.tsx  TopBar.tsx
src/components/sidebar/: Sidebar.tsx  ThreadList.tsx
src/hooks/: useSureThingEmbed.ts
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
