[package]
name = "mission-control"
version = "0.2.3"
description = "Linkgrow Mission Control"
authors = ["Linkgrow"]
edition = "2021"

[lib]
name = "mission_control_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
